--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,8 +12,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+substitutions:
+  _GCP_PROJECT_ID: ''
+
 timeout: 2700s
 steps:
 - id: 'Run PCI Profile'
   waitFor: ['-']
   name: gcr.io/ks4-test-compliant/inspec-gcp-pci-profile:v3.2.1-2
+  args:
+    - --input gcp_project_id=${_GCP_PROJECT_ID}
