--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,4 +20,4 @@ steps:
 - id: 'Run PCI Profile'
   waitFor: ['-']
   name: gcr.io/ks4-test-compliant/inspec-gcp-pci-profile:v3.2.1-2
-  args: ['exec', '/share/.', '-t', 'gcp://', '--input gcp_project_id=${_GCP_PROJECT_ID}']
+  args: ['exec', '/share/.', '-t', 'gcp://']
