--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,6 +14,7 @@
 
 substitutions:
   _GCP_PROJECT_ID: ''
+  _REPORTS_BUCKET: ''
 
 timeout: 2700s
 steps:
@@ -21,3 +22,12 @@ steps:
   waitFor: ['-']
   name: gcr.io/ks4-test-compliant/inspec-gcp-pci-profile:v3.2.1-2
   args: ['exec', '/share/.', '-t', 'gcp://', '--input', 'gcp_project_id=${_GCP_PROJECT_ID}', '--reporter', 'cli ', json:/workspace/pci_report.json', 'html:./pci_report.html']
+
+steps:
+- id: 'Store Report'
+  waitFor: ['Run PCI Profile']
+  name: gcr.io/cloud-builders/gsutil
+  args:
+    - cp
+    - '/workspace/terraform/modules/notifications/js/config.json'
+    - 'gs://${_REPORTS_BUCKET}/pci_report-$${BUILD}.json'
