--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -32,6 +32,8 @@ steps:
     - 'cli'
     - json:/workspace/pci_report.json'
     - 'html:./pci_report.html'
+    - |
+        | true
 
 - id: 'Store Report'
   waitFor: ['Run PCI Profile']
