--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -29,10 +29,18 @@ steps:
       --input gcp_project_id=${_GCP_PROJECT_ID} \
       --reporter cli json:/workspace/pci_report.json html:/workspace/pci_report.html | tee out.json
 
-- id: 'Store Report'
+- id: 'Store json Report'
   waitFor: ['Run PCI Profile']
   name: gcr.io/cloud-builders/gsutil
   args:
     - cp
     - /workspace/pci_report.json
     - gs://${_REPORTS_BUCKET}/pci_report-${BUILD_ID}.json
+
+- id: 'Store Report'
+  waitFor: ['Run PCI Profile']
+  name: gcr.io/cloud-builders/gsutil
+  args:
+    - cp
+    - /workspace/pci_report.html
+    - gs://${_REPORTS_BUCKET}/pci_report-${BUILD_ID}.html
