--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,7 +20,7 @@ timeout: 2700s
 steps:
 - id: 'Run PCI Profile'
   waitFor: ['-']
-  name: gcr.io/ks4-test-compliant/inspec-gcp-pci-profile:v3.2.1-2
+  name: gcr.io/${_GCP_PROJECT_ID}/inspec-gcp-pci-profile:v3.2.1-2
   entrypoint: '/bin/sh'
   args: 
     - '-c'
